[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["macros"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
argh = "0.1.13"
async-trait = "0.1.88"
futures = "0.3.31"
macros = { version = "0.1.0", path = "macros" }
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
